# WebRtcNsAgcModel

./: .gitignore  LICENSE  README.md
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/legacy_agc/: CMakeLists.txt  agc-lib.cpp
app/src/main/cpp/legacy_ns/: CMakeLists.txt  ns-lib.cpp
app/src/main/java/vip/inode/demo/webrtc/: AutomaticGainControlUtils.java  MainActivity.kt  NoiseSuppressorUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: recorder.pcm
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
